# germanium

./: AUTHORS  ChangeLog  Makefile  Makefile.am  README  autogen.sh  configure.ac  emusic-gnome  emusic-gnome.applications  emusic-gnome.desktop  emusic-gnome.glade  emusic-gnome.gladep  emusic-gtk.glade  emusic.xml  mathusalem.py
data/: Makefile.am  emusic-gnome.desktop  emusic-gnome.glade  germanium.applications  germanium.desktop  germanium.glade  germanium.schemas
emusic/: Makefile.am  decrypt.py  emp.py  emusic-gnome.py  gconf_util.py  main.py  progress.py  vfs_util.py
germanium/: Makefile.am  emp.py  gconf_util.py  germanium.py  progress.py  vfs_util.py
m4/: as-ac-expand.m4
